[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mockstep"
version = "0.1.0"
requires-python = ">=3.11"

[project.scripts]
mockstep = "mockstep:main"

[dependency-groups]
dev = ["ruff", "pytest"]

[tool.hatch.build.targets.wheel]
sources = ["."]
include = ["mockstep.py", "telnet.py", "terminal_graphs.py"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
